feat: adding sorting and filtering for reports